[package]
name = "femboytester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui-notify = "0.7.0"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = "1.13"

[profile.release]
opt-level = 3
debug = false
panic = "abort"
codegen-units = 16
lto = true
incremental = false